backend/public/css/spotfix.css
/*
 * CSS for google map height to be a % of total display height
 */
body,html{
  height:100%;
  width:100%;
}
.off-canvas-wrap,.inner-wrap{
  height:100%;   
}
.main-section {
  height: 100%;
}
#map_canvas {
  height: 100%;
}
.page{
  height:100%;   
}
/*
 * END CSS for google map
 */

/*
 * Utility CSS
 */
.empty-column {
  min-height: 1px;
}
/*
 * END Utility CSS
 */

/*
 * CSS for dashboard
 */
#dashboard {
  height: 40%;
}
#dashboard-title {
}
/*
 * END CSS for dashboard
 */

/*
 * CSS for SpotFix info modal
 */
#sf-info-modal {
  overflow-y: auto;
}
/*
 * END CSS for SpotFix info modal
 */

/*
 * CSS for SpotFix hidden element
 */
.sf-hidden {
    display: none;
}
/*
 * END CSS for SpotFix hidden element
 */

